# rag-laptop-assistant

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  chatbot.py  chitchat.py  docker-compose.yml  pyproject.toml
api/: auth.py  main.py  schemas.py
api/routes/: auth_callback.py  chat.py  health.py
config/: logging.yaml  settings.py  settings.yaml
core/: history.py  load_settings.py  models.py  schema.py
data/: merge_data_all.json
embedding/: embedder.py
evaluation/: eval_dataset.json  run_eval.py
ingestion/: build_index.py  data_loader.py  pdf_loader.py  processor.py  text_processor.py
ingestion/helpers/: map_category.py
llm/: generator.py
retriever/: bm25_reranker.py  filter_builder.py  intent_parser.py  retriever.py  semantic_router.py
supabase/: config.toml
supabase/migrations/: 20260515014347_init_chat_history.sql  20260515120000_grant_chat_history.sql
tests/: test_api.py  test_bm25_reranker.py  test_filter_builder.py  test_generator.py  test_history.py  test_hybrid_scorer.py  test_intent_parser.py  test_models.py  test_processor.py  test_semantic_router.py
ui/: api_client.py  auth.py  chat.py  config.py
vector_store/: client.py  collection.py  filters.py  ops.py
