[project]
name = "chatbot-laptop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==1.14.0",
    "openai>=2.31.0",
    "pdfplumber==0.11.6",
    "pydantic==2.11.1",
    "python-dotenv==1.1.0",
    "pyvi==0.1.1",
    "pyyaml==6.0.2",
    "qdrant-client==1.14.2",
    "rank-bm25==0.2.2",
]
